<resources>
    <string name="app_name">PUMApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="default_value">Settings</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="system_default">Android Compatible Theme</string>
    <string name="selected_language">English</string>
    <string name="theme_settings">Theme Settings</string>
    <string name="current_theme">Default</string>
    <string name="about">About</string>
    <string name="pum">PUM</string>
    <string name="android">Android</string>
    <string name="opis">Aplikacja stworzona na potrzeby Programowania Urządzeń Mobilnych</string>
    <string name="start">START</string>
    <string name="module">Module</string>
    <string name="lecture_long_name">Lecture long name</string>
    <string name="module_list">Lista modułów</string>
    <string name="applications">Aplikacje</string>
</resources>